--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["repl.it user <replituser@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 colorama = "^0.4.4"
+replitdb = "^0.0.13"
 
 [tool.poetry.dev-dependencies]
 
