--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["repl.it user <replituser@example.com>"]
 python = "^3.8"
 colorama = "^0.4.4"
 replitdb = "^0.0.13"
+getkey = "^0.6.5"
 
 [tool.poetry.dev-dependencies]
 
